Add training capabilities
